--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,30 +3,30 @@ requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
 
 [tool.poetry]
-name = "backend"
+name = "poetry-fastapi-docker"
 version = "0.1.0"
 description = "Minimal Poetry example with Docker Multi-Stage builds"
 authors = ["Michael Oliver <mo175@live.com>"]
-maintainers = ["svx <sven@leftxs.org>"]
+maintainers = ["svx <sven@leftxs.org>", "jiz <tang.j.joel@gmail.com>"]
+package-mode=false
 
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.9"
+fastapi = {version = "0.110", extras = ["standard"]}
+gunicorn = "^23.0.0"
+uvicorn = "^0.34.0"
 
-fastapi = "0.52.0"
-gunicorn = "^20.0.4"
-uvicorn = "^0.11.3"
-
-
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 coverage = { version = "5.0.3", extras = ["toml"]}
 black = "^19.10b0"
 isort = { version = "^4.3.21", extras = ["pyproject"]}
 requests = "^2.23.0"
-
-
-[tool.poetry.group.dev.dependencies]
 pytest = "^7.1.3"
+
+
+[tool.poetry.group."dev.dependencies".dependencies]
+httpx = "^0.28.1"
 
 [tool.black]
 # https://github.com/psf/black
